# cat-lock

./: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  PORTING.md  README.md  USAGE.md  build.bat  build_nopause.bat  generate_icon.py  pytest.ini  requirements-dev.txt  requirements.txt  run_build.py  wish-list.md
.claude/: settings.local.json
.github/workflows/: README.md  ci.yml  release.yml  rust-ci.yml  rust-release.yml
pawgate-rs/: .gitignore  Cargo.toml  DEVELOPMENT.md  INSTALL.md  README.md  ROADMAP.md  build.bat  build.rs
pawgate-rs/resources/: generate_icon.py  pawgate.manifest  pawgate.rc
pawgate-rs/src/: config.rs  keyboard.rs  main.rs  overlay.rs  settings_dialog.rs  tray.rs
resources/config/: config.json
src/: main.py
src/config/: config.py
src/keyboard_controller/: hotkey_listener.py  pressed_events_handler.py
src/os_controller/: notifications.py  tray_icon.py
src/ui/: overlay_window.py
src/util/: lockfile_handler.py  path_util.py  web_browser_util.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_keyboard_controller.py
tests/smoke/: test_smoke.py
tests/unit/: __init__.py  test_config.py  test_lockfile_handler.py
